# DailyArxiv

./: .gitignore  LICENSE  README.md  package-lock.json  package.json  start.py  start.sh  test_scraper.py
backend/: config.py  main.py  requirements.txt
backend/database/: db.py  models.py
backend/scraper/: arxiv.py
backend/tests/: test_full.py  test_scraper.py
daily-arxiv/: package-lock.json  package.json  vite.config.js
daily-arxiv/src/: main.js
daily-arxiv/src/components/: CategoryFilter.vue  PaperCard.vue  PaperGrid.vue  TheHeader.vue  ThemeSwitch.vue
daily-arxiv/src/stores/: papers.js
daily-arxiv/src/views/: HomeView.vue
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.vue  router.js
frontend/src/assets/styles/: _themes.scss  _variables.scss  index.scss  main.scss
frontend/src/components/: CategoryFilter.vue  PaperCard.vue  PaperGrid.vue  ReadStatusFilter.vue
frontend/src/stores/: papers.js  readStatus.js  theme.js
frontend/src/views/: HomeView.vue
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
